[gd_scene load_steps=4 format=3 uid="uid://bvgneoi8bkhpi"]

[ext_resource type="Texture2D" uid="uid://1xrmrfnhw57q" path="res://assets/items/Weapons/sword.png" id="1_gcekk"]
[ext_resource type="Script" uid="uid://de252k3sd8hs1" path="res://Utility/item_option.gd" id="1_k7luv"]
[ext_resource type="FontFile" uid="uid://cqskf2m8dkugo" path="res://assets/fonts/tenderness.otf" id="2_k7luv"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 180.0
offset_bottom = 50.0
color = Color(0.548963, 0.548963, 0.548963, 1)
script = ExtResource("1_k7luv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="Icon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 38.0
offset_bottom = 38.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_gcekk")

[node name="Label_Name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_k7luv")
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Description" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_k7luv")
theme_override_font_sizes/font_size = 8
text = "Description of item
"
autowrap_mode = 3

[node name="Label_Level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_k7luv")
theme_override_font_sizes/font_size = 12
text = "Level 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
